@@ -1,5 +1,5 @@
 % generated automatically by mf-to-table.py version 0.4
-% on Wed Oct 29 09:54:00 1997
+% on Wed Oct 29 16:41:31 1997
 % Do not edit
 % input from out/feta16.log
 % name
