@@ -1,5 +1,5 @@
 % generated automatically by mf-to-table.py version 0.4
-% on Tue Oct 28 12:15:08 1997
+% on Tue Oct 28 20:44:01 1997
 % Do not edit
 % input from out/font-en-tja20.log
 % name
